# setup-env

./: README.md  ansible-install.sh  common.yaml  desktop.yaml  hosts  pyproject.toml  requirements.yaml
macos/: Makefile  default.config.yml
macos/roles/elliotweiser.osx-command-line-tools/meta/: .galaxy_install_info
macos/roles/geerlingguy.dotfiles/meta/: .galaxy_install_info
macos/roles/geerlingguy.homebrew/defaults/: main.yml
macos/roles/geerlingguy.homebrew/meta/: .galaxy_install_info
macos/roles/geerlingguy.homebrew/tasks/: main.yml
macos/roles/geerlingguy.mas/meta/: .galaxy_install_info
roles/activate-sands/files/: activate-sands.bash
roles/add-to-groups/tasks/: main.yaml
roles/add_to_groups/tasks/: main.yaml
roles/chsh-fish/tasks/: main.yaml
roles/common-install-packages/tasks/: main.yaml
roles/common-install-packages/vars/: main.yaml
roles/common_install_packages/tasks/: main.yaml
roles/common_install_packages/vars/: main.yaml
roles/install-ssh-authorized_keys/tasks/: main.yaml
roles/install_tailscale/tasks/: main.yaml
roles/setup-google-drive/tasks/: main.yaml
ubuntu/: .ansible-lint  README.md  common.yaml  desktop.yaml  hosts  requirements.yaml
ubuntu/.github/workflows/: ansible-lint.yaml
ubuntu/roles/activate_sands/tasks/: main.yaml
ubuntu/roles/chsh_fish/tasks/: main.yaml
ubuntu/roles/common_install_packages/vars/: main.yaml
