[tool.poetry]
name = "setup-env"
version = "0.1.0"
description = ""
authors = ["TAKAHASHI Shuuji <shuuji3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^2.9.11"
jinja2 = "^2.11.2"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
